# vd_agent

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile.am  README.md  appveyor.yml  configure.ac  mingw-spice-vdagent.spec.in  spice-vdagent.wxs.in  test-png
common/: test-log.cpp  vdcommon.cpp  vdlog.cpp  vdlog.h  version.rc
vdagent/: desktop_layout.cpp  desktop_layout.h  display_configuration.cpp  display_setting.cpp  file_xfer.cpp  file_xfer.h  image.cpp  image.h  imagepng.cpp  imagetest.cpp  vdagent.cpp
vdservice/: vdservice.cpp
